styling: spacing between elements plus some fixes

--- a/components/Auction/AuctionCard.module.css
+++ b/components/Auction/AuctionCard.module.css
@@ -4,7 +4,6 @@
   width: 400px;
   display: flex;
   flex-direction: column;
-  box-sizing: content-box;
   border-radius: 20px;
   box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
   align-items: center;
